--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
 
   # For Model
   json_serializable: ^6.2.0
+  json_annotation: ^4.5.0
   freezed_annotation: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
